--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><strong>Miles Galli</strong></title>
-    <body>  
-</head>
+    <title>Animal</title>
+    </head>
+        <header>
+    <h1>Cuttle Fish </h1>
 
-<header> 
-<h1>Miles Galli</h1>
-</header>
+        </header>
 
-<img src="https://www.facebook.com/photo.php?fbid=2550338398345297&set=a.132796353432859&type=3&theater" >
-<p> Born in Zimbabwe, excited to become a web developer !</p>
+<body>
+    	<h2>Description</h2>
+    	<p>
+            This species is the largest of all the cuttlefish and an expert at colour change and camouflage. They can change colour in an instant, and by raising parts of their skin, they can also change shape and texture to imitate rock, sand or seaweed. These displays have various interpretations to other marine creatures and may be used for camouflage, mating or even hypnotising prey.
 
-<h2> Contact Info</h2>
-<ul>
-    <li>Email:<a href= galli.miles@gmail.com > </li>
-    <li>Git HUb:<a href="https://github.com/milesgalli/Practice-"></a></li>
-    <li>Porfolio</li>
+        </p>
+    <img src="https://media.australianmuseum.net.au/media/dd/images/Cuttlefish.width-1600.e349c19.jpg" alt="">
+    
+<footer>Written By Miles Galli</footer>
 
 
 </body>
+
 </html>
